// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Modal Modal 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  font-size: 1rem;
  font-weight: 500;
  color: white;
  background-color: #175BF5;
  padding: 0 1rem;
  height: 2.875rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-2:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-2:hover:not(:disabled) {
  background-color: #1451dc;
}

.emotion-2:active:not(:disabled) {
  background-color: #1248c4;
}

.emotion-2:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-2:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  margin-left: 0;
  margin-right: 0;
}

.emotion-5 {
  position: fixed;
  z-index: 3000;
  width: 100vw;
  height: 100vh;
  top: 0;
  left: 0;
  background-color: rgba(255,255,255,0.2);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 {
  max-width: 31.25rem;
  max-height: 42.75rem;
}

.emotion-7 {
  box-shadow: 0px 4px 8px rgba(16, 48, 102, 0.07);
  background: white;
  border-radius: 0.25rem;
}

.emotion-8 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  padding: 0.5rem 0.5rem 0 0;
  box-sizing: border-box;
}

.emotion-8 svg {
  color: #5f6c85;
}

.emotion-9 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: #5f6c85;
  width: 2.25rem;
  background-color: transparent;
  padding: 0;
  height: 2.25rem;
  border-radius: 100%;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-9:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-9:hover:not(:disabled) {
  background-color: #f3f5f8;
}

.emotion-9:active:not(:disabled) {
  background-color: #e7ebf2;
}

.emotion-9:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-9:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-10 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-11 {
  fill: #5f6c85;
  width: 1rem;
  height: 1rem;
}

.emotion-11 path {
  fill: #5f6c85;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 1.5rem 2rem 2rem 2rem;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "column",
              "justifyContent": "center",
              "padding": "1rem",
              "width": 768,
            }
          }
        >
          <div
            style={
              Object {
                "height": "100%",
                "width": "100%",
              }
            }
          >
            <button
              className="emotion-2"
              data-testid="button"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <span
                className="emotion-3"
              >
                <span
                  className="emotion-4"
                >
                  Open Modal
                </span>
              </span>
            </button>
            <div
              className="emotion-5"
              data-testid="modal-container"
            >
              <div
                role="button"
              >
                <div
                  className="emotion-6"
                >
                  <div
                    className="emotion-7"
                  >
                    <div
                      className="emotion-8"
                    >
                      <button
                        className="emotion-9"
                        data-testid="icon-button-modal-close"
                        disabled={false}
                        onClick={[Function]}
                        type="button"
                      >
                        <span
                          className="emotion-10"
                          onClick={[Function]}
                        >
                          <span
                            className="emotion-11"
                          />
                        </span>
                      </button>
                    </div>
                    <div
                      className="emotion-12"
                    >
                      <div>
                        This is just a text inside the modal. This text serves really no purpose but for some reason here you are, continuing reading it. You are just like Alice in Wonderland, trying to see where this will lead you.
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              style={
                Object {
                  "height": "1800px",
                }
              }
            />
          </div>
          <p
            style={
              Object {
                "paddingTop": "8px",
              }
            }
          >
            
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Modal Modal Content 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  font-size: 1rem;
  font-weight: 500;
  color: white;
  background-color: #175BF5;
  padding: 0 1rem;
  height: 2.875rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-2:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-2:hover:not(:disabled) {
  background-color: #1451dc;
}

.emotion-2:active:not(:disabled) {
  background-color: #1248c4;
}

.emotion-2:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-2:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  margin-left: 0;
  margin-right: 0;
}

.emotion-5 {
  position: fixed;
  z-index: 3000;
  width: 100vw;
  height: 100vh;
  top: 0;
  left: 0;
  background-color: rgba(255,255,255,0.2);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 {
  max-width: 31.25rem;
  max-height: 42.75rem;
}

.emotion-7 {
  box-shadow: 0px 4px 8px rgba(16, 48, 102, 0.07);
  background: white;
  border-radius: 0.25rem;
}

.emotion-8 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  padding: 0.5rem 0.5rem 0 0;
  box-sizing: border-box;
}

.emotion-8 svg {
  color: #5f6c85;
}

.emotion-9 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: #5f6c85;
  width: 2.25rem;
  background-color: transparent;
  padding: 0;
  height: 2.25rem;
  border-radius: 100%;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-9:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-9:hover:not(:disabled) {
  background-color: #f3f5f8;
}

.emotion-9:active:not(:disabled) {
  background-color: #e7ebf2;
}

.emotion-9:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-9:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-10 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-11 {
  fill: #5f6c85;
  width: 1rem;
  height: 1rem;
}

.emotion-11 path {
  fill: #5f6c85;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 1.5rem 2rem 2rem 2rem;
}

.emotion-13 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  text-align: left;
  color: #515d72;
  font-weight: 400;
}

.emotion-14 {
  font-size: 0.875rem;
  margin: 0 0 0.25rem 0;
}

.emotion-15 {
  font-size: 1.75rem;
  color: #0f0f17;
  font-weight: 500;
  margin: 0 0 2rem 0;
}

.emotion-16 {
  font-size: 1rem;
  color: #444d5f;
  max-height: 26.875rem;
  overflow-y: hidden;
  margin: 0;
}

.emotion-17 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  margin: 2rem 0 0 0;
}

.emotion-17 button {
  margin-left: 1rem;
}

.emotion-18 {
  font-size: 1rem;
  font-weight: 500;
  color: #175BF5;
  background-color: transparent;
  padding: 0 1rem;
  height: 2.875rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-18:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-18:hover:not(:disabled) {
  background-color: #e7eefe;
}

.emotion-18:active:not(:disabled) {
  background-color: #d0defd;
}

.emotion-18:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-18:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "column",
              "justifyContent": "center",
              "padding": "1rem",
              "width": 768,
            }
          }
        >
          <div
            style={
              Object {
                "height": "100%",
                "width": "100%",
              }
            }
          >
            <button
              className="emotion-2"
              data-testid="button"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <span
                className="emotion-3"
              >
                <span
                  className="emotion-4"
                >
                  Open Modal
                </span>
              </span>
            </button>
            <div
              className="emotion-5"
              data-testid="modal-container"
            >
              <div
                role="button"
              >
                <div
                  className="emotion-6"
                >
                  <div
                    className="emotion-7"
                  >
                    <div
                      className="emotion-8"
                    >
                      <button
                        className="emotion-9"
                        data-testid="icon-button-modal-close"
                        disabled={false}
                        onClick={[Function]}
                        type="button"
                      >
                        <span
                          className="emotion-10"
                          onClick={[Function]}
                        >
                          <span
                            className="emotion-11"
                          />
                        </span>
                      </button>
                    </div>
                    <div
                      className="emotion-12"
                    >
                      <div
                        className="emotion-13"
                        data-testid="modal-content"
                        role="dialog"
                      >
                        <p
                          className="emotion-14"
                        >
                          Label
                        </p>
                        <h5
                          className="emotion-15"
                        >
                          Heading
                        </h5>
                        <p
                          className="emotion-16"
                        >
                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas tristique eros at fringilla fringilla. Donec volutpat lobortis euismod
                        </p>
                        <div
                          className="emotion-17"
                        >
                          <button
                            className="emotion-18"
                            data-testid="button-modal-content-secondaryCTA"
                            disabled={false}
                            onClick={[Function]}
                            type="button"
                          >
                            <span
                              className="emotion-3"
                            >
                              <span
                                className="emotion-4"
                              >
                                Secondary Action
                              </span>
                            </span>
                          </button>
                          <button
                            className="emotion-2"
                            data-testid="button-modal-content-primaryCTA"
                            disabled={false}
                            onClick={[Function]}
                            type="button"
                          >
                            <span
                              className="emotion-3"
                            >
                              <span
                                className="emotion-4"
                              >
                                Do Action
                              </span>
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              style={
                Object {
                  "height": "1800px",
                }
              }
            />
          </div>
          <p
            style={
              Object {
                "paddingTop": "8px",
              }
            }
          >
            
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
